# grafeo

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  Doxyfile.in  GPLHEADER  README.md  appveyor.yml  circle.yml  header.html  wercker.yml
.tx/: config
cmake/: Gettext.cmake  grfmacros.cmake
data/: chessgray.pgm  crossbw_seeds_indices.csv  crossbw_seeds_labels.csv  custom.css  distance_transform_input.pgm  nerd_seeds_indices.csv  nerd_seeds_labels.csv  starbw_seeds_indices.csv  target.xcf  target_seeds_indices.csv  test_array_read_csv_float_1.csv  test_array_read_csv_uint16_1.csv  test_array_read_csv_uint16_2.csv  test_array_read_csv_uint8_1.csv  test_array_read_csv_uint8_2.csv
data/html/: custom.css
include/grafeo/: array.h  bucket.h  chart.h  config.h  config.h.in  dicom.h  display.h  displaywidget.h  displaywindow.h  drawing.h  error.h  hal.h  i18n-lib.h  ift.h  image.h  imagewidget.h  list.h  macro.h  pqueue.h  queue.h  range.h  size.h  slist.h  trackbar.h  type.h
include/grafeo/chart/: axis.h  chart.h  chartcomponent.h  chartcontainer.h  chartpanel.h  chartwidget.h  chartwindow.h  config.h  fontproperties.h  legend.h  plot.h  plotline.h
include/grafeo/core/: array.h  bucket.h  config.h  config.h.in  list.h  mat4.h  ndarray.h  pqueue.h  queue.h  range.h  slist.h  type.h  vec3.h  vec4.h  vec6.h  vec7.h
include/grafeo/display/: chartwidget.h  display.h  displaywindow.h  glprogram.h  glshader.h  idisplaywidget.h  imagewidget.h  trackbar.h
include/grafeo/gl/: glcamera.h  glmat.h  globject.h  glprojection.h  glprojection_orthographic.h  glprojection_perspective.h  glrenderer.h  glvec3.h  glvec4.h
include/grafeo/ift/: ift.h
include/grafeo/imgproc/: drawing.h  image.h
include/grafeo/medical/: nifti.h  nifti1.h  nifti1_io.h  nifti2.h  znzfile.h  znzlib.h
po/: LINGUAS  POTFILES.in  de.po  en_US.po  grafeo.pot  jp.UTF-8.po  jp.po  pt_BR.po
src/: array.c  bucket.c  config.c  dicom.c  display.c  displaywidget.c  displaywindow.c  drawing.c  error.c  ift.c  image.c  imagewidget.c  list.c  pqueue.c  queue.c  range.c  slist.c  trackbar.c  type.c
src/chart/: axis.c  chart.c  chartcomponent.c  chartcontainer.c  chartpanel.c  chartwidget.c  chartwindow.c  config.c  fontproperties.c  legend.c  plot.c  plotline.c
src/core/: array.c  bucket.c  config.c  config.h  list.c  mat4.c  ndarray.c  pqueue.c  queue.c  range.c  slist.c  type.c  vec3.c  vec4.c  vec6.c  vec7.c
src/display/: chartwidget.c  display.c  displaywindow.c  glprogram.c  glshader.c  idisplaywidget.c  imagewidget.c  trackbar.c
src/gl/: glcamera.c  glmat.c  globject.c  glprojection.c  glprojection_orthographic.c  glprojection_perspective.c  glvec3.c  glvec4.c
src/ift/: ift.c
src/imgproc/: drawing.c  image.c
src/medical/: nifti1_io.c  znzfile.c  znzlib.c
tests/: test_array.c  test_chart.c  test_chartcontainer.c  test_chartwidget.c  test_dicom.c  test_display.c  test_displaywindow.c  test_drawing.c  test_error.c  test_gl_camera.c  test_gl_object.c  test_hal.c  test_ift.c  test_image.c  test_imagewidget.c  test_list.c  test_nifti.c  test_plot.c  test_pqueue.c  test_queue.c  test_slist.c
tests/chart/: test_axis.c  test_chart.c  test_chartcomponent.c  test_chartpanel.c  test_config.c  test_fontproperties.c  test_legend.c  test_plotline.c
tests/core/: test_mat4.c  test_ndarray.c  test_pqueue.c  test_slist.c  test_vec3.c  test_vec4.c  test_vec6.c  test_vec7.c
tests/display/: test_chartwidget.c  test_display.c  test_displaywindow.c  test_imagewidget.c  test_trackbar.c
tests/gl/: test_glcamera.c  test_glcontainer.c  test_gllight.c  test_glloader.c  test_glloader_3ds.c  test_glloader_dae.c  test_glloader_md3.c  test_glloader_obj.c  test_glloader_x3d.c  test_glmat.c  test_glmaterial.c  test_glmesh.c  test_globject.c  test_glprogram.c  test_glprojection.c  test_glprojection_orthographic.c  test_glprojection_perspective.c  test_glrenderer.c  test_glscene.c  test_glshader.c
tests/ift/: test_ift.c
tests/imgproc/: test_drawing.c  test_image.c
tests/medical/: test_nifti.c
tutorials/: array.md  cvt_color.md  dift.md  gb_ift.md  gsc_ift.md  ift.md  io_image.md  list.md  main.md  oift.md  pqueue.md  queue.md  tutorials.md
